<resources>
    <string name="app_name">Sample FPS Config Generator</string>

    <string name="menu_refresh_apps">Refresh</string>
    <string name="menu_send">Send to FPS</string>

    <string name="no_config_for_flow_type">This flow type has no stages configured</string>

    <string name="timeouts_title">System timeouts</string>
    <string name="flow_control_title">Flow control</string>
    <string name="seconds">seconds</string>
    <string name="settings_flow_response_timeout">Flow application response timeout</string>
    <string name="settings_flow_response_timeout_summary">Timeout while waiting for a response from a flow application in seconds.\nMin: 0 Max: 3600 Use 0 to set no timeout.</string>
    <string name="settings_payment_response_timeout">Payment application response timeout</string>
    <string name="settings_payment_response_timeout_summary">Timeout while waiting for a response from a payment application in seconds.\nMin: 0 Max: 3600 Use 0 to set no timeout.</string>
    <string name="settings_split_timeout">Split timeout</string>
    <string name="settings_split_timeout_summary">Timeout while waiting for a response from the split application in seconds.\nMin: 0 Max: 3600 Use 0 to set no timeout.</string>
    <string name="settings_select_timeout">Select timeout</string>
    <string name="settings_select_timeout_summary">Timeout while waiting for a response from the user to select an application or device in seconds.\nMin: 0 Max: 3600 Use 0 to set no timeout.</string>
    <string name="settings_abort_flow_app">Abort on flow app error</string>
    <string name="settings_abort_flow_app_summary">If set this flag will abort (CANCEL) a payment if any flow application in the flow fails with an error.</string>
    <string name="settings_abort_payment_app">Abort on payment app error</string>
    <string name="settings_abort_payment_app_summary">If set this flag ensures that the flow will be aborted (CANCELLED) if an error occurs during a call to ANY payment application. If disabled the flow will keep attempting to take payment until manually cancelled.</string>
    <string name="settings_allow_status_bar">Allow status bar access</string>
    <string name="settings_allow_status_bar_summary">If set this flag will allow access to FPS from the status bar.</string>
    <string name="settings_use_websocket">Use websocket communications</string>
    <string name="settings_use_websocket_summary">If set the all AppFlow communication will be sent over a websocket instead of the default Android Messenger</string>
    <string name="menu_flow_configuration">Flow configuration</string>
    <string name="menu_settings">Settings</string>
    <string name="openDrawer">Open navigation</string>
    <string name="closeDrawer">Close navigation</string>
    <string name="auto_generate_configs">AUTO</string>

</resources>
