<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="640dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_vertical"
                android:layout_marginRight="@dimen/margin_horizontal"
                android:layout_marginBottom="@dimen/margin_vertical"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    android:text="@string/timeouts_title"/>

                <com.aevi.sdk.pos.flow.config.sample.ui.view.EditTimeout
                    android:id="@+id/flow_response_timeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:editSuffix="@string/seconds"
                    app:editSummary="@string/settings_flow_response_timeout_summary"
                    app:editTitle="@string/settings_flow_response_timeout"/>

                <com.aevi.sdk.pos.flow.config.sample.ui.view.EditTimeout
                    android:id="@+id/payment_response_timeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:editSuffix="@string/seconds"
                    app:editSummary="@string/settings_payment_response_timeout_summary"
                    app:editTitle="@string/settings_payment_response_timeout"/>

                <com.aevi.sdk.pos.flow.config.sample.ui.view.EditTimeout
                    android:id="@+id/split_timeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:editSuffix="@string/seconds"
                    app:editSummary="@string/settings_split_timeout_summary"
                    app:editTitle="@string/settings_split_timeout"/>

                <com.aevi.sdk.pos.flow.config.sample.ui.view.EditTimeout
                    android:id="@+id/select_timeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:editSuffix="@string/seconds"
                    app:editSummary="@string/settings_select_timeout_summary"
                    app:editTitle="@string/settings_select_timeout"/>

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    android:text="@string/flow_control_title"/>

                <com.aevi.sdk.pos.flow.config.sample.ui.view.SettingSwitch
                    android:id="@+id/abort_on_flow_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:switchDefaultValue="false"
                    app:switchSummary="@string/settings_abort_flow_app_summary"
                    app:switchTitle="@string/settings_abort_flow_app"/>

                <com.aevi.sdk.pos.flow.config.sample.ui.view.SettingSwitch
                    android:id="@+id/abort_on_payment_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:switchDefaultValue="false"
                    app:switchSummary="@string/settings_abort_payment_app_summary"
                    app:switchTitle="@string/settings_abort_payment_app"/>

                <com.aevi.sdk.pos.flow.config.sample.ui.view.SettingSwitch
                    android:id="@+id/allow_status_bar_access"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:switchDefaultValue="true"
                    app:switchSummary="@string/settings_allow_status_bar_summary"
                    app:switchTitle="@string/settings_allow_status_bar"/>

                <com.aevi.sdk.pos.flow.config.sample.ui.view.SettingSwitch
                    android:id="@+id/use_websocket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:switchDefaultValue="true"
                    app:switchSummary="@string/settings_use_websocket_summary"
                    app:switchTitle="@string/settings_use_websocket"/>
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</RelativeLayout>